--- a/ttsx/templates/base.html
+++ b/ttsx/templates/base.html
@@ -2,52 +2,71 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>{{title}}天天生鲜</title>
+	<title>{{title}} 天天生鲜</title>
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	{%block head%}{%endblock head%}
 </head>
 <body>
-{#此处用来判断是否继承base模板#}
-{% if top|default:'1' == '1' %}
-    <div class="header_con">
+
+{%if top|default:'1' == '1'%}
+	<div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
+                {#  次处是验证是否有登陆成功，如果登陆成功，则会讲uid传过来进行验证，并且request对象能在模板当中被访问到   #}
+                {#  session是request对象的属性，用.uid 来提取键值#}
+				{%if request.session.uid%}
+				<div class="login_btn fl">
+                    {#  在视图中存储的uname在此处使用#}
+					欢迎您：<em>{{request.session.uname}}</em>
+					<span>|</span>
+					<a href="/user/logout/">退出</a>
 				</div>
+				{%else%}
 				<div class="login_btn fl">
 					<a href="/user/login/">登录</a>
 					<span>|</span>
 					<a href="/user/register/">注册</a>
 				</div>
+				{%endif%}
 				<div class="user_link fl">
 					<span>|</span>
 					<a href="/user/">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="../cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="../user_center_order.html">我的订单</a>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="../index.html" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 	</div>
-{% endif %}
+
+
+	<!--<div class="search_bar clearfix">-->
+		<!--<a href="index.html" class="logo fl"><img src="images/logo.png"></a>-->
+		<!--<div class="search_con fl">-->
+			<!--<input type="text" class="input_text fl" name="" placeholder="搜索商品">-->
+			<!--<input type="button" class="input_btn fr" name="" value="搜索">-->
+		<!--</div>-->
+		<!--<div class="guest_cart fr">-->
+			<!--<a href="#" class="cart_name fl">我的购物车</a>-->
+			<!--<div class="goods_count fl" id="show_count">1</div>-->
+		<!--</div>-->
+	<!--</div>-->
+{%endif%}
 
 {%block body%}{%endblock body%}
-
-
 
     <div class="footer no-mp">
 		<div class="foot_link">
