--- a/ttsx/templates/ttsx_goods/index.html
+++ b/ttsx/templates/ttsx_goods/index.html
@@ -48,6 +48,7 @@
 {%for dic in list1%}
 	<div class="list_model">
 			<div class="list_title clearfix">
+                                {# forloop表示当前循环的次数，t1为实际分类对象，ttilte为其属性           #}
 				<h3 class="fl" id="model0{{forloop.counter}}">{{dic.t1.ttitle}}</h3>
 				<div class="subtitle fl">
 					<span>|</span>
@@ -56,7 +57,7 @@
 					<a href="/{{goods.id}}/">{{goods.gtitle|truncatechars:14}}</a>
 					{%endfor%}
 				</div>
-				<a href="/list/" class="goods_more fr" id="fruit_more">查看更多 ></a>
+				<a href="/list{{ dic.t1.id }}_1_1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
 			</div>
 
 			<div class="goods_con clearfix">
