--- a/ttsx/templates/ttsx_goods/list.html
+++ b/ttsx/templates/ttsx_goods/list.html
@@ -1,209 +1,100 @@
-{% extends 'base.html' %}
+{% extends 'ttsx_goods/base.html' %}
 {%block head%}{%endblock head%}
 
-{%block body%}
-
-	<div class="navbar_con">
-		<div class="navbar clearfix">
-			<div class="subnav_con fl">
-				<h1>全部商品分类</h1>	
-				<span></span>			
-				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
-					<li><a href="#" class="seafood">海鲜水产</a></li>
-					<li><a href="#" class="meet">猪牛羊肉</a></li>
-					<li><a href="#" class="egg">禽类蛋品</a></li>
-					<li><a href="#" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="#" class="ice">速冻食品</a></li>
-				</ul>
-			</div>
-			<ul class="navlist fl">
-				<li><a href="/">首页</a></li>
-				<li class="interval">|</li>
-				<li><a href="/">手机生鲜</a></li>
-				<li class="interval">|</li>
-				<li><a href="/ ">抽奖</a></li>
-			</ul>
-		</div>
-	</div>
-
+{%block detail%}
 	<div class="breadcrumb">
 		<a href="#">全部分类</a>
 		<span>></span>
-		<a href="#">{{ t1.ttitle }}</a>
+		<a href="#">{{t1.ttitle}}</a>
 	</div>
+{%endblock detail%}
 
-	<div class="main_wrap clearfix">
-		<div class="l_wrap fl clearfix">
-			<div class="new_goods">
-				<h3>新品推荐</h3>
-				<ul>
-                    {% for new in new_list %}
-					<li>
-						<a href="/{{ new.id }}/"><img src="/static/{{ new.gpic }}"></a>
-						<h4><a href="/{{ new.id }}/">{{ new.gtitle }}</a></h4>
-						<div class="prize">￥{{  new.gprice}}</div>
-					</li>
-                    {% endfor %}
+{% block right %}
 
-				</ul>
-			</div>
-		</div>
-
-		<div class="r_wrap fr clearfix">
+{%load filters%}
+        <div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="#" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
+				<a href="/list{{ t1.id }}_1_1/" {% if orderby == '1' %}class="active"{% endif %}>默认</a>
+				<a href="/list{{ t1.id }}_1_2/?desc={{ desc|multi }}" {% if orderby == '2' %}class="active"{% endif %}>价格</a>
+{#				<a href="/list{{ t1.id }}_1_2/" {% if orderby == '2' %}class="active"{% endif %}>价格</a>#}
+
+                <a href="/list{{ t1.id }}_1_3/" {% if orderby == '3' %}class="active"{% endif %}>人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
+                {% for goods in page %}
+                    {#   goodswei为传递过来的商品对象，在创建模型时，有id,gpic等属性 #}
 				<li>
-					<a href="../detail.html"><img src="images/goods/goods003.jpg"></a>
-					<h4><a href="../detail.html">大兴大棚草莓</a></h4>
+					<a href="/{{ goods.id }}/"><img src="/static/{{ goods.gpic }}"></a>
+					<h4><a href="/{{ goods.id }}/">/{{ goods.gtitle }}/</a></h4>
 					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
+						<span class="prize">￥/{{ goods.gprice}}/</span>
+						<span class="unit">/{{ goods.gprice }}//{{ goods.gunit }}/</span>
 						<a href="#" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods004.jpg"></a>
-					<h4><a href="#">吐鲁番梨光杏</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.50</span>
-						<span class="unit">5.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods005.jpg"></a>
-					<h4><a href="#">黄肉桃</a></h4>
-					<div class="operate">
-						<span class="prize">￥10.00</span>
-						<span class="unit">10.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods006.jpg"></a>
-					<h4><a href="#">进口西梅</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods007.jpg"></a>
-					<h4><a href="#">香梨</a></h4>
-					<div class="operate">
-						<span class="prize">￥6.45</span>
-						<span class="unit">6.45/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods008.jpg"></a>
-					<h4><a href="#">栗子</a></h4>
-					<div class="operate">
-						<span class="prize">￥9.50</span>
-						<span class="unit">9.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods009.jpg"></a>
-					<h4><a href="#">海南香蕉</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.30</span>
-						<span class="unit">3.30/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods010.jpg"></a>
-					<h4><a href="#">青苹果</a></h4>
-					<div class="operate">
-						<span class="prize">￥5.00</span>
-						<span class="unit">5.00/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods011.jpg"></a>
-					<h4><a href="#">山莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥28.80</span>
-						<span class="unit">28.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-
-				<li>
-					<a href="#"><img src="images/goods/goods012.jpg"></a>
-					<h4><a href="#">奇异果</a></h4>
-					<div class="operate">
-						<span class="prize">￥25.80</span>
-						<span class="unit">25.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods013.jpg"></a>
-					<h4><a href="#">蜜桔</a></h4>
-					<div class="operate">
-						<span class="prize">￥4.80</span>
-						<span class="unit">4.8/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods014.jpg"></a>
-					<h4><a href="#">脐橙</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.50</span>
-						<span class="unit">3.50/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods001.jpg"></a>
-					<h4><a href="#">进口柠檬</a></h4>
-					<div class="operate">
-						<span class="prize">￥3.90</span>
-						<span class="unit">3.90/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="images/goods/goods002.jpg"></a>
-					<h4><a href="#">玫瑰香葡萄</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
+                {% endfor %}
 			</ul>
 
 			<div class="pagenation">
-				<a href="#"><上一页</a>
-				<a href="#" class="active">1</a>
-				<a href="#">2</a>
-				<a href="#">3</a>
-				<a href="#">4</a>
-				<a href="#">5</a>
-				<a href="#">下一页></a>
+                {% if page.has_previous %}
+                    <a href="/list{{ t1.id }}_1_{{ orderby }}/">首页</a>&nbsp;&nbsp;
+                    {#   此处为向前翻页所需要的索引地址格式,分类对象id_页码                 #}
+				    <a href="/list{{ t1.id }}_{{ page.number|add:-1 }}_{{ orderby }}/"><上一页</a>
+                {% endif %}
+
+                {% if page.paginator.num_pages < 5 %}
+                    {% for pindex in page.paginator.page_range %}
+                        {% if pindex == page.number %}
+                            <a href="#" class="active">{{ pindex }}</a>
+                        {% else %}
+                             <a href="/list{{ t1.id }}_{{ pindex }}_{{ orderby }}/" >{{ pindex }}</a>
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    {% if page.number == 1 %}
+                        <a href="#" class="active">1</a>
+                        <a href="/list{{ t1.id }}_2_{{ orderby }}/" >2</a>
+                        <a href="/list{{ t1.id }}_3_{{ orderby }}/" >3</a>
+                        <a href="/list{{ t1.id }}_4_{{ orderby }}/" >4</a>
+                        <a href="/list{{ t1.id }}_5_{{ orderby }}/" >5</a>
+                    {% elif page.number == 2 %}
+                        <a href="/list{{ t1.id }}_1_{{ orderby }}/" >1</a>
+                        <a href="#" class="active">2</a>
+                        <a href="/list{{ t1.id }}_3_{{ orderby }}/" >3</a>
+                        <a href="/list{{ t1.id }}_4_{{ orderby }}/" >4</a>
+                        <a href="/list{{ t1.id }}_5_{{ orderby }}/" >5</a>
+                    {% elif page.number == page.paginator.num_pages %}
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-4 }}_{{ orderby }}/" class="active">{{ page.number|add:-4 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-3 }}_{{ orderby }}/" class="active">{{ page.number|add:-3 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-2 }}_{{ orderby }}/" class="active">{{ page.number|add:-2 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-1 }}_{{ orderby }}/" class="active">{{ page.number|add:-1 }}</a>
+                        <a href="#" class="active">{{ page.number }}</a>
+                    {% elif page.number == page.paginator.num_pages|add:-1 %}
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-3 }}_{{ orderby }}/" class="active">{{ page.number|add:-3 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-2 }}_{{ orderby }}/" class="active">{{ page.number|add:-2 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-1 }}_{{ orderby }}/" class="active">{{ page.number|add:-1 }}</a>
+                        <a href="#" class="active">{{ page.number }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:1 }}_{{ orderby }}/" class="active">{{ page.number|add:1 }}</a>
+
+                    {% elif page.number == page.paginator.num_pages|add:-2 %}
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-2 }}_{{ orderby }}/" class="active">{{ page.number|add:-2 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:-1 }}_{{ orderby }}/" class="active">{{ page.number|add:-1 }}</a>
+                        <a href="#" class="active">{{ page.number }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:1 }}_{{ orderby }}/" class="active">{{ page.number|add:1 }}</a>
+                        <a href="/list{{ t1.id }}_{{ page.number|add:2 }}_{{ orderby }}/" class="active">{{ page.number|add:2 }}</a>
+                    {% endif %}
+                {% endif %}
+
+
+                {% if page.has_next %}
+                    <a href="/list{{ t1.id }}_{{ page.number|add:1 }}_{{ orderby }}/"><下一页</a>&nbsp;&nbsp;
+                    <a href="/list{{ t1.id }}_{{ page.paginator.num_pages}}_{{ orderby }}/">末页</a>
+
+                {% endif %}
+
+
 			</div>
 		</div>
-	</div>
-{%endblock body%}
+
+{%endblock right%}
