--- a/ttsx/templates/ttsx_goods/index.html
+++ b/ttsx/templates/ttsx_goods/index.html
@@ -57,6 +57,7 @@
 					<a href="/{{goods.id}}/">{{goods.gtitle|truncatechars:14}}</a>
 					{%endfor%}
 				</div>
+                {# 分类，页码，排序规则#}
 				<a href="/list{{ dic.t1.id }}_1_1/" class="goods_more fr" id="fruit_more">查看更多 ></a>
 			</div>
 
